--- a/pharma-auth-app/package.json
+++ b/pharma-auth-app/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "ethers": "^5.7.2",
+    "html5-qrcode": "^2.3.8",
     "next": "15.3.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
