--- a/pharma-backend/.env
+++ b/pharma-backend/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=Rock12345
+DB_PASSWORD=Linggesh@PostgreSQL
 DB_NAME=medicine_authenticity
 DB_PORT=5432
